Fix flexbox alignment issue in Chrome on category archive pages

--- a/css/src/util/extends.scss
+++ b/css/src/util/extends.scss
@@ -142,7 +142,7 @@
 	.grid-x {
 		@include breakpoint(medium) {
 			flex-wrap: nowrap;
-			justify-content: end;
+			justify-content: flex-end;
 		}
 	}
 
